# hayekswarm

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.web  LICENSE  README.md  SKILL.md  docker-compose.yml  god_view.html  main.py  pyproject.toml  skill.json
.github/workflows/: ci.yml
bridges/: __init__.py  claude_bridge.py
docs/architecture/: COUNCIL-CONFIG.md  HAYEK-ECONOMY.md  MODEL-ROUTING.md  README.md
examples/: basic_mesh.py
hayekmas/: __init__.py
hayekmas/utils/: logger.py
scripts/: deploy-tailscale.sh  install.sh
sdk/: __init__.py  client.py  join_mesh.py
server/: __init__.py  app.py  auth.py  database.py  models.py  voidtether_bridge.py  wiki.py  worker.py
skills/wiki/: README.md
swarm/: __init__.py  coordinator.py  docker_sandbox.py  message_bus.py  role_manager.py  swarm_memory.py
swarm/consensus/: __init__.py  raft.py
swarm/cost_router/: __init__.py
swarm/council/: __init__.py  agents.py  council.py  dimension_map.py
swarm/docker_sandbox/: __init__.py
tests/: mock_mcp_server.py  test_economy_regression.py  test_economy_router.py  test_mcp_adapter.py  test_raft_consensus.py  test_security.py  test_v03.py
voidtether/: __init__.py
voidtether/adapters/: __init__.py
voidtether/cli/: vt.py
voidtether/core/: __init__.py  auth.py  bridge.py  envelope.py  lifecycle.py  manifest.py  middleware_auth.py  pool.py  router.py  semantic_registry.py
voidtether/economy/: __init__.py  agent.py  auction.py  config.py  engine.py  hayek_engine.py  hayek_router.py  population.py  router.py
voidtether/mesh/: __init__.py  discovery.py
voidtether/sdk/: __init__.py  acp_bridge.py
voidtether/server/: __init__.py  admin.py  agent_persistence.py  app.py  changelog.py  events.py  semantic_routes.py  (+1 more)
(+34 files in other folders)
